@@ -1,7 +1,7 @@
 Package: robustbase
 Version: 0.93-8
 VersionNote: Released 0.93-7 on 2021-01-04 to CRAN
-Date: 2021-01-27
+Date: 2021-05-22
 Title: Basic Robust Statistics
 Authors@R: c(person("Martin","Maechler", role=c("aut","cre"), email="maechler@stat.math.ethz.ch", comment = c(ORCID = "0000-0002-8685-9910"))
          , person("Peter", "Rousseeuw", role="ctb", comment = "Qn and Sn")
